# henson

./: .build.yml  CMakeLists.txt  LEGAL.txt  LICENSE.txt  README.md  analysis.cpp  git_watcher.cmake  henson-chai.cpp  henson-exec.cpp  henson-hwl.cpp  henson.cpp  sample.hwl  simulation.c
bindings/python/: CMakeLists.txt  henson.cpp  mpi-capsule.h  mpi.cpp  mpi.hpp  test.py  test_embedded_python.cpp
doc/: procmap.md  scheduler.md
examples/: run_test.sh
examples/async/: CMakeLists.txt  async-sched.chai  async-sched.py  async.chai  async.hwl  async_sched.chai  receive-async.cpp  send-async.cpp  tags.hpp
examples/embed-python/: CMakeLists.txt  embed-python.chai  example.py  queue.chai  scheduler.chai  surrogate-mpi.py  surrogate.py
examples/fair/: CMakeLists.txt  fair.chai  fair.hwl
examples/intercomm/: CMakeLists.txt  intercomm-sched.chai  intercomm.chai  intercomm.hwl  intercomm_sched.chai  intercomm_sched_ext.chai  receive.cpp  send.cpp  tags.hpp
examples/queue/: CMakeLists.txt  exchange.c  exchange.chai
examples/simple/: CMakeLists.txt  analysis.cpp  sample.hwl  simple-sched.chai  simple.chai  simple.hwl  simple_batch.slurm  simple_sched.chai  simulation.c  simulation.cpp
examples/storage/: CMakeLists.txt  common.hpp  compute.cpp  storage.chai  storage.cpp
examples/utils/: readlines.chai
ext/fmt/: CMakeLists.txt
ext/pybind11/: tags
include/chaiscript/tests/: Makefile  c++_empty_map.cpp  chai_c++_jump_test.cpp  chai_jump.chai  empty_map.chai
include/henson/: chai-serialization.hpp  command-line.hpp  context.h  context.hpp  coroutine.hpp  data.h  data.hpp  hwl.egg  hwl.hpp  logger.hpp  mpi-noncollective-comm.h  mpi_noncollective_comm.hpp  namemap.hpp  procs.hpp  puppet.hpp  python-puppet.hpp  scheduler.hpp  serialization.hpp  time.hpp  version.hpp
include/henson/chai/: data.hpp  procs.hpp  puppet.hpp  scheduler.hpp  stdlib.hpp  util.hpp
include/henson/io/: array.hpp
include/opts/: opts.h
src/: context.cpp  coro.c  data.cpp  restrict-world.c  restrict-world.w  version.cpp.in  wrap.py
src/chai/: data.cpp  procs.cpp  puppet.cpp  scheduler.cpp  stdlib.cpp  util.cpp
tools/: CMakeLists.txt  common.hpp  receive.cpp  receive_ext.cpp  send.cpp  timer.cpp
tools/scratch/: test_mpi_non_collective_comm.cpp  test_noncollective_comm  test_parse  test_parse.cpp
